# evostats

./: 404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/: testing.yaml
.github/workflows/: documentation.yaml  testing.yaml
api/: index.html
docs/: api.md
docs/_static/: custom.css
evostats/: __init__.py  basic.py
search/: search_index.json
test/: test_basic.py
